<resources>
    <string name="app_name">2105ProjectGroup13</string>
    <string name="service_novigrad">SERVICE NOVIGRAD</string>
    <string name="register_an_account">REGISTER AN ACCOUNT</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_sign_in">Already registered? Sign in.</string>
    <string name="customer_account">Customer Account</string>
    <string name="branch_account">Branch Account</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register.</string>
    <string name="login_to_your_account">LOGIN TO YOUR ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome</string>
    <string name="you_are_logged_in_as">You are logged in as:</string>
    <string name="account_type">Account Type</string>
    <string name="delete_users">Delete Users</string>
    <string name="delete_user">Delete User</string>
    <string name="last_name2">Last Name:</string>
    <string name="name">Name:</string>
    <string name="user_list">User List</string>
    <string name="all_users_are_listed_by_their_user_uid">All users are listed by their user uid.</string>
    <string name="press_and_hold_on_a_uid_to_get_the_option_to_the_delete_the_user_and_to_see_the_user_name_and_account_type">Press and hold on a uid to get the option to the delete the user, and to see the user name and account type.</string>
    <string name="add_form">Add Form</string>
    <string name="textview">TextView</string>
    <string name="add_service">Add Service</string>
    <string name="document_name">Document Name</string>
    <string name="choose_file_type">Choose File Type:</string>
    <string name="png_or_jpg">.png or .jpg</string>
    <string name="pdf">PDF</string>
    <string name="add_document">Add Document</string>
    <string name="form_name">Form Name</string>
    <string name="field_name">Field Name</string>
    <string name="remove_field">Remove Field</string>
    <string name="welcome_admin">Welcome Admin!</string>
    <string name="manage_services">Manage Services</string>
    <string name="enter_service_name">Enter Service Name</string>
    <string name="service_name">Service Name:</string>
    <string name="enter_price">Enter Price: $</string>
    <string name="enter_price_only_number_values">Enter Price (only number values)</string>
    <string name="adding_a_service">Adding a Service</string>
    <string name="let_s_begin_to_add_a_service">Our first steps to add a service!</string>
    <string name="please_indicate_the_price_of_the_service">Please indicate the price of the service.</string>
    <string name="service_name2">Service Name</string>
    <string name="price">Price</string>
    <string name="you_can_not_name_this_service_the_same_name_as_another_service_all_services_must_have_unique_names">You can not name this service the same name as another service. All services must have unique names.</string>
    <string name="continue2">continue</string>
    <string name="add_forms_and_documents">Add Forms and Documents</string>
    <string name="to_the_service">to the service:</string>
    <string name="add_as_many_forms_and_documents_as_you_wish_to_the_service">Add as many Forms and Documents as you wish to the service.</string>
    <string name="when_you_have_finished_adding_the_forms_and_documents_press_done_to_return_to_the_manage_services_screen">When you have finished adding the Forms and Documents, press "Done" to return to the Manage Services screen.</string>
    <string name="please_indicate_a_service_name">Please indicate a service name.</string>
    <string name="done">Done</string>
    <string name="manage_and_delete_users">Manage and Delete Users</string>
    <string name="view_edit_and_delete_services">View, Edit and Delete Services</string>
    <string name="delete_service">Delete Service</string>
    <string name="view_requirements">View Requirements</string>
    <string name="service_list">Service List</string>
    <string name="update_price">Update Price</string>
    <string name="all_services_must_have_a_price_you_can_delete_a_price_but_you_can_update_it">All services must have a price. You can not delete a price, but you can update it.</string>
    <string name="new_price">New Price</string>
    <string name="add_requirements_forms_and_documents">Add Requirements (Forms and Documents)</string>
    <string name="delete_requirement">Delete Requirement</string>
    <string name="edit_requirement_name">Edit Requirement Name</string>
    <string name="new_requirement_name">New Requirement Name</string>
    <string name="edit_service_name">edit service name</string>
    <string name="new_service_name">New Service Name</string>
    <string name="requirements_of">Requirements of:</string>
    <string name="delete">Delete</string>
    <string name="edit_name">Edit Name</string>
    <string name="new_name">New Name</string>
    <string name="button">Button</string>
    <string name="fields_of">Fields of:</string>
    <string name="requirement">Requirement</string>
    <string name="back_to_service_list">Back To Service List</string>
    <string name="back_to_requirement_list">Back to Requirement List</string>
    <string name="cancel">Cancel</string>
    <string name="add_field">Add Field</string>
    <string name="description">Description</string>
    <string name="new_description">New Description</string>
    <string name="edit_description">Edit Description</string>
    <string name="update_file_type">Update File Type</string>
    <string name="return_to_admin_welcome_screen">Return to Admin Welcome Screen</string>
    <string name="return_to_manage_services_screen">Return To Manage Services Screen</string>
    <string name="this_is_the_list_of_created_services_press_down_on_a_service_to_delete_or_rename_it_press_on_a_service_to_see_its_requirements">This is the list of created Services. Press and hold down on a Service to delete or rename it. Single press on a Service to view its Requirements.</string>
    <string name="this_is_the_list_of_a_your_selected_service_s_requirements_press_and_hold_down_on_a_requirement_to_delete_or_rename_it_you_can_only_update_the_price_not_delete_it_single_press_on_a_form_to_edit_its_fields_single_press_on_a_document_to_edit_its_description_or_filetype">This is the list of the Requirements of your selected Service. Press and hold down on a Requirement to delete or rename it. You can only update the price, not delete it. Single press on a Form to edit its fields. Single press on a Document to edit its description or fileType.</string>
    <string name="press_and_hold_down_on_a_field_to_delete_or_rename_it">This is the list of fields of your selected Form. Press and hold down on a field to delete or rename it.</string>
    <string name="offer_service">Offer Service</string>
    <string name="offer_services_created_by_admin">Offer Services Created by Admin</string>
    <string name="stop_offering_service">Stop Offering Service</string>
    <string name="view_services_you_are_currently_offering">View Services You are currently offering</string>
    <string name="this_is_the_list_of_the_requirements_of_your_selected_service_single_press_on_a_form_to_view_its_fields">This is the list of the Requirements of your selected Service. Single press on a Form to view its fields.</string>
    <string name="go_to_services_list">Go to Services List</string>
    <string name="view_all_services">View All Services</string>
    <string name="view_currently_offered_services">View Currently Offered Services</string>
    <string name="this_is_the_list_of_the_requirements_of_your_selected_service_single_press_on_a_form_to_view_its_fields_if_an_admin_changes_the_name_of_this_service_while_you_are_viewing_this_screen_please_return_to_one_of_the_service_lists_and_select_this_service_again_but_with_its_updated_name">This is the list of the Requirements of your selected Service. Single press on a Form to view its Fields. If an Admin changes the name of this Service while you are viewing this screen, please return to one of the Service Lists and select this Service again but with its updated name.</string>
    <string name="return_to_branch_welcome_screen">Return to Branch Welcome Screen</string>
    <string name="the_following_is_the_list_of_all_services_offered_by_the_admin">The following is the list of all Services offered by the Admin. Single press on a Service to view its Requirements.</string>
    <string name="all_services_list">All Services List</string>
    <string name="offered_services_list">Offered Services List</string>
    <string name="the_following_is_the_list_of_services_you_are_currently_offering_to_your_customers_single_press_on_a_service_to_view_its_requirements">The following is the list of Services you are currently offering to your Customers. Single press on a Service to view its Requirements.</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="set_profile_information">Set Profile Information</string>
    <string name="branch_uid">Branch uID:</string>
    <string name="uid">uID</string>
    <string name="branch_profile">Branch Profile</string>
    <string name="addresscolon">Address:</string>
    <string name="phone_number_colon">Phone Number:</string>
    <string name="edit_branch_profile_details">Edit Branch Profile Details</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="view_and_edit_branch_profile">View and Edit Branch Profile</string>
    <string name="welcome2">Welcome</string>
    <string name="you_are_a_branch_account">You are a Branch Account!</string>
    <string name="edit_street_address">Edit Street Address</string>
    <string name="street">Street #</string>
    <string name="street_address">Street Address</string>
    <string name="edit_address_details">Edit Address Details</string>
    <string name="postal_code">Postal Code</string>
    <string name="edit_city">Edit City</string>
    <string name="edit_postal_code">Edit Postal Code</string>
    <string name="city">City</string>
    <string name="go_to_branch_welcome_screen">Go to Branch Welcome Screen</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="documentscolon">Documents:</string>
    <string name="customerid">customerID:</string>
    <string name="customeridnocolon">customerID</string>
    <string name="service_request">Service Request</string>
    <string name="service_requested">Service Requested:</string>
    <string name="price_of_service">Price of Service:</string>
    <string name="png">png</string>
    <string name="jpg">jpg</string>
    <string name="this_is_a_scrollable_list_of_the_fields_filled_out_by_the_customer_for_each_form_he_or_she_was_required_to_complete_each_field_is_depicted_in_the_following_format_form_name_field_name_content_customer_submitted">This is a scrollable list of the fields filled out by the Customer for each Form he or she was required to complete. Each field is depicted in the following format, Form name: Field Name: Content Customer submitted</string>
    <string name="forms_fields">Forms/Fields</string>
    <string name="this_is_a_scrollable_list_of_the_documents_submitted_by_the_customer_tap_on_a_document_to_open_and_view_it_in_the_app">This is a scrollable list of the Documents submitted by the Customer. Tap on a Document to open and view it in the app.</string>
</resources>