<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddFormsAndDocuments">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/addFormsAndDocuments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_requirements_forms_and_documents"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/toTheService"
                android:layout_width="139dp"
                android:layout_height="wrap_content"
                android:text="@string/to_the_service"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/serviceNameOnScreen"
                android:layout_width="271dp"
                android:layout_height="wrap_content"
                android:text="@string/service_name2"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/addFormsandDocumentsInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_as_many_forms_and_documents_as_you_wish_to_the_service"
            android:textAlignment="center" />

        <Button
            android:id="@+id/firstAddFormButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_form" />

        <Button
            android:id="@+id/firstAddDocumentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_document" />

        <TextView
            android:id="@+id/addFormsandDocumentsInstructions2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/when_you_have_finished_adding_the_forms_and_documents_press_done_to_return_to_the_manage_services_screen"
            android:textAlignment="center" />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>