<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/changeableServiceRequestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/service_request"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/customerIDTextView"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/customerid" />

            <TextView
                android:id="@+id/changeableCustomerIDTextView"
                android:layout_width="313dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/customeridnocolon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/serviceRequestedTextView"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/service_requested" />

            <TextView
                android:id="@+id/changeableServiceNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/service_name2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pricePaidTextView"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:text="@string/price_of_service" />

            <TextView
                android:id="@+id/changeableServicePriceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/formsTextView"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:text="@string/forms_fields"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/formsInfoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_is_a_scrollable_list_of_the_fields_filled_out_by_the_customer_for_each_form_he_or_she_was_required_to_complete_each_field_is_depicted_in_the_following_format_form_name_field_name_content_customer_submitted"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ListView
                android:id="@+id/formFilledFieldsListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/documentsTextView"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/documentscolon"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/documentsExplanationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_is_a_scrollable_list_of_the_documents_submitted_by_the_customer_tap_on_a_document_to_open_and_view_it_in_the_app"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ListView
                android:id="@+id/attachmentsListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/acceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept" />

            <Button
                android:id="@+id/rejectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reject" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back_to_menu" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>