<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDescriptionDialog"
                android:layout_width="0dp"
                android:layout_height="239dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/new_description"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/editDescriptionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/chooseFileTypeRadioGroup2"
                android:layout_width="match_parent"
                android:layout_height="99dp">

                <TextView
                    android:id="@+id/chooseDocumentType2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_file_type" />

                <RadioButton
                    android:id="@+id/pngSelectorButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/png" />

                <RadioButton
                    android:id="@+id/pdfSelectorButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jpg" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/chooseNewTypeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_file_type" />

        <Button
            android:id="@+id/cancelButtonDocument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>