<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetBranchProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setProfileInformationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/branch_profile"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/branchUIDTextView"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:text="@string/branch_uid"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/uidBranchTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uid" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:text="@string/addresscolon"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/showAddressTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/phoneNumberTextView"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number_colon"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/showPhoneNumberTextView"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone_number" />
        </LinearLayout>

        <TextView
            android:id="@+id/editProfileDetailsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_branch_profile_details"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/enterAddressEditText"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress" />

            <Button
                android:id="@+id/editAddressButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_address" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/enterPhoneEditText"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <Button
                android:id="@+id/editPhoneNumberButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_phone_number" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>