<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminManageServices">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/manageUsersTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_services"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addServiceButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_service" />

        <Button
            android:id="@+id/viewServicesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_edit_and_delete_services" />

        <Button
            android:id="@+id/returnToAdminWelcomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_to_admin_welcome_screen" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>